--- a/index.html
+++ b/index.html
@@ -652,27 +652,35 @@
     </section>
 
     <footer class="py-10 border-t border-slate-800 bg-darkbg text-sm text-slate-400 mt-auto">
-        <div class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row justify-between items-center gap-6">
-            <div class="flex items-center gap-2 font-medium">
-                <i data-lucide="lightbulb" class="w-4 h-4 text-slate-400"></i>
-                Fikirbilite &copy; 2026
-            </div>
+        <div class="max-w-7xl mx-auto px-6 flex flex-col gap-6">
             
-            <div class="flex items-center gap-3">
-                <a href="https://twitter.com/intent/tweet?url=https://fikirbilite.com&text=Fikrin%20değerini%20ölçme%20sanatı:%20Fikirbilite.%20Fizibiliteden%20önceki%20ilk%20adım!" target="_blank" class="w-8 h-8 rounded-full bg-slate-800 flex items-center justify-center text-slate-400 hover:bg-[#1DA1F2] hover:text-white transition-all hover:scale-110 shadow-sm" title="X (Twitter)'da Paylaş">
-                    <i data-lucide="twitter" class="w-4 h-4"></i>
-                </a>
-                <a href="https://www.linkedin.com/shareArticle?mini=true&url=https://fikirbilite.com&title=Fikirbilite&summary=Fikrin%20değerini%20ölçme%20sanatı" target="_blank" class="w-8 h-8 rounded-full bg-slate-800 flex items-center justify-center text-slate-400 hover:bg-[#0A66C2] hover:text-white transition-all hover:scale-110 shadow-sm" title="LinkedIn'de Paylaş">
-                    <i data-lucide="linkedin" class="w-4 h-4"></i>
-                </a>
-                <a href="https://api.whatsapp.com/send?text=Fikrin%20değerini%20ölçme%20sanatı:%20Fikirbilite.%20Mutlaka%20incele!%20https://fikirbilite.com" target="_blank" class="w-8 h-8 rounded-full bg-slate-800 flex items-center justify-center text-slate-400 hover:bg-[#25D366] hover:text-white transition-all hover:scale-110 shadow-sm" title="WhatsApp'ta Paylaş">
-                    <i data-lucide="message-circle" class="w-4 h-4"></i>
-                </a>
+            <!-- Üst Satır: Sol Logo, Sağ Paylaşım Butonları -->
+            <div class="flex flex-col sm:flex-row justify-between items-center gap-4">
+                <div class="flex items-center gap-2 font-medium">
+                    <i data-lucide="lightbulb" class="w-4 h-4 text-slate-400"></i>
+                    Fikirbilite &copy; 2026
+                </div>
+                
+                <div class="flex items-center gap-3">
+                    <a href="https://twitter.com/intent/tweet?url=https://fikirbilite.com&text=Fikrin%20değerini%20ölçme%20sanatı:%20Fikirbilite.%20Fizibiliteden%20önceki%20ilk%20adım!" target="_blank" class="w-8 h-8 rounded-full bg-slate-800 flex items-center justify-center text-slate-400 hover:bg-[#1DA1F2] hover:text-white transition-all hover:scale-110 shadow-sm" title="X (Twitter)'da Paylaş">
+                        <i data-lucide="twitter" class="w-4 h-4"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/shareArticle?mini=true&url=https://fikirbilite.com&title=Fikirbilite&summary=Fikrin%20değerini%20ölçme%20sanatı" target="_blank" class="w-8 h-8 rounded-full bg-slate-800 flex items-center justify-center text-slate-400 hover:bg-[#0A66C2] hover:text-white transition-all hover:scale-110 shadow-sm" title="LinkedIn'de Paylaş">
+                        <i data-lucide="linkedin" class="w-4 h-4"></i>
+                    </a>
+                    <a href="https://api.whatsapp.com/send?text=Fikrin%20değerini%20ölçme%20sanatı:%20Fikirbilite.%20Mutlaka%20incele!%20https://fikirbilite.com" target="_blank" class="w-8 h-8 rounded-full bg-slate-800 flex items-center justify-center text-slate-400 hover:bg-[#25D366] hover:text-white transition-all hover:scale-110 shadow-sm" title="WhatsApp'ta Paylaş">
+                        <i data-lucide="message-circle" class="w-4 h-4"></i>
+                    </a>
+                </div>
             </div>
 
-            <p class="text-center md:text-right">
-                Bu kavram ilk kez 15 Ocak 2026 tarihinde <strong class="text-slate-300">Zafer Latif</strong> tarafından literatüre kazandırılmıştır (v1.0.1).
-            </p>
+            <!-- Alt Satır: Ortalanmış Bilgi Metni -->
+            <div class="text-center pt-6 border-t border-slate-800/50">
+                <p>
+                    Bu kavram ilk kez 15 Ocak 2026 tarihinde <strong class="text-slate-300">Zafer Latif</strong> tarafından literatüre kazandırılmıştır (v1.0.1).
+                </p>
+            </div>
+
         </div>
     </footer>
 
